// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`Component: TicketQuantity - color passed in 1`] = `
.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  color: #024ddf;
}

.c2 {
  border: 0;
  -webkit-clip: rect(0 0 0 0);
  clip: rect(0 0 0 0);
  height: 1px;
  margin: -1px;
  overflow: hidden;
  padding: 0;
  position: absolute;
  white-space: nowrap;
  width: 1px;
}

.c1 {
  display: inline-block;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
  vertical-align: middle;
  -webkit-transition: -webkit-transform 0.2s ease-out;
  -webkit-transition: transform 0.2s ease-out;
  transition: transform 0.2s ease-out;
  fill: currentColor;
}

<div>
  <span
    class="c0"
    color="link"
  >
    <svg
      aria-hidden="true"
      class="c1"
      focusable="false"
      height="1.5em"
      viewBox="0 0 24 24"
      width="1.5em"
    >
      <path
        d="M3.25 1h17.5v18.95L17.95 23H3.24zm1.5 1.5v19h12.54l1.96-2.13V2.5zM16 16.75H6v-1.5h10zm-10 3h7.5v-1.5H6zm0-12.5h12v6.5H6zm1.5 1.5v3.5h9v-3.5zm1.5 2.5h6v-1.5H9z"
      />
    </svg>
    <span
      class="c2"
    >
      Ticket count:
    </span>
    <span
      aria-hidden="true"
    >
      ×
    </span>
    1
  </span>
</div>
`;

exports[`Component: TicketQuantity - no number passed in 1`] = `
.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  color: #646464;
}

.c2 {
  border: 0;
  -webkit-clip: rect(0 0 0 0);
  clip: rect(0 0 0 0);
  height: 1px;
  margin: -1px;
  overflow: hidden;
  padding: 0;
  position: absolute;
  white-space: nowrap;
  width: 1px;
}

.c1 {
  display: inline-block;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
  vertical-align: middle;
  -webkit-transition: -webkit-transform 0.2s ease-out;
  -webkit-transition: transform 0.2s ease-out;
  transition: transform 0.2s ease-out;
  fill: currentColor;
}

<div>
  <span
    class="c0"
  >
    <svg
      aria-hidden="true"
      class="c1"
      focusable="false"
      height="1.5em"
      viewBox="0 0 24 24"
      width="1.5em"
    >
      <path
        d="M3.25 1h17.5v18.95L17.95 23H3.24zm1.5 1.5v19h12.54l1.96-2.13V2.5zM16 16.75H6v-1.5h10zm-10 3h7.5v-1.5H6zm0-12.5h12v6.5H6zm1.5 1.5v3.5h9v-3.5zm1.5 2.5h6v-1.5H9z"
      />
    </svg>
    <span
      class="c2"
    >
      Ticket count:
    </span>
    <span
      aria-hidden="true"
    >
      ×
    </span>
    0
  </span>
</div>
`;

exports[`Component: TicketQuantity - no quantity prop passed in 1`] = `
.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  color: #646464;
}

.c2 {
  border: 0;
  -webkit-clip: rect(0 0 0 0);
  clip: rect(0 0 0 0);
  height: 1px;
  margin: -1px;
  overflow: hidden;
  padding: 0;
  position: absolute;
  white-space: nowrap;
  width: 1px;
}

.c1 {
  display: inline-block;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
  vertical-align: middle;
  -webkit-transition: -webkit-transform 0.2s ease-out;
  -webkit-transition: transform 0.2s ease-out;
  transition: transform 0.2s ease-out;
  fill: currentColor;
}

<div>
  <span
    class="c0"
  >
    <svg
      aria-hidden="true"
      class="c1"
      focusable="false"
      height="1.5em"
      viewBox="0 0 24 24"
      width="1.5em"
    >
      <path
        d="M3.25 1h17.5v18.95L17.95 23H3.24zm1.5 1.5v19h12.54l1.96-2.13V2.5zM16 16.75H6v-1.5h10zm-10 3h7.5v-1.5H6zm0-12.5h12v6.5H6zm1.5 1.5v3.5h9v-3.5zm1.5 2.5h6v-1.5H9z"
      />
    </svg>
    <span
      class="c2"
    >
      Ticket count:
    </span>
    <span
      aria-hidden="true"
    >
      ×
    </span>
    3
  </span>
</div>
`;

exports[`Component: TicketQuantity - number passed in 1`] = `
.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  color: #646464;
}

.c2 {
  border: 0;
  -webkit-clip: rect(0 0 0 0);
  clip: rect(0 0 0 0);
  height: 1px;
  margin: -1px;
  overflow: hidden;
  padding: 0;
  position: absolute;
  white-space: nowrap;
  width: 1px;
}

.c1 {
  display: inline-block;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
  vertical-align: middle;
  -webkit-transition: -webkit-transform 0.2s ease-out;
  -webkit-transition: transform 0.2s ease-out;
  transition: transform 0.2s ease-out;
  fill: currentColor;
}

<div>
  <span
    class="c0"
  >
    <svg
      aria-hidden="true"
      class="c1"
      focusable="false"
      height="1.5em"
      viewBox="0 0 24 24"
      width="1.5em"
    >
      <path
        d="M3.25 1h17.5v18.95L17.95 23H3.24zm1.5 1.5v19h12.54l1.96-2.13V2.5zM16 16.75H6v-1.5h10zm-10 3h7.5v-1.5H6zm0-12.5h12v6.5H6zm1.5 1.5v3.5h9v-3.5zm1.5 2.5h6v-1.5H9z"
      />
    </svg>
    <span
      class="c2"
    >
      Ticket count:
    </span>
    <span
      aria-hidden="true"
    >
      ×
    </span>
    1
  </span>
</div>
`;

exports[`Component: TicketQuantity with Icon - number passed in 1`] = `
.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  color: #646464;
}

.c2 {
  border: 0;
  -webkit-clip: rect(0 0 0 0);
  clip: rect(0 0 0 0);
  height: 1px;
  margin: -1px;
  overflow: hidden;
  padding: 0;
  position: absolute;
  white-space: nowrap;
  width: 1px;
}

.c1 {
  display: inline-block;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
  vertical-align: middle;
  -webkit-transition: -webkit-transform 0.2s ease-out;
  -webkit-transition: transform 0.2s ease-out;
  transition: transform 0.2s ease-out;
  fill: currentColor;
}

<div>
  <span
    class="c0"
  >
    <svg
      aria-hidden="true"
      class="c1"
      focusable="false"
      height="1.5em"
      viewBox="0 0 24 24"
      width="1.5em"
    >
      <path
        d="M5.25 1h13.5v22H5.25zm1.5 1.5v1.25h10.5V2.5zm0 16.25h10.5V5.25H6.75zm4.25 1.5v1.25h2v-1.25z"
      />
    </svg>
    <span
      class="c2"
    >
      Ticket count:
    </span>
    <span
      aria-hidden="true"
    >
      ×
    </span>
    1
  </span>
</div>
`;
